(fix) broken styles from tw upgrade, display full menu bar on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -224,6 +224,12 @@ html:has(.homepage-hero) {
 
   header {
     @apply py-4! lg:py-[25px]! px-0! h-auto!;
+
+    @media (width >= 48rem /* 768px */) {
+      .social-icons svg {
+        --sl-icon-size: 34px !important;
+      }
+    }
   }
 
   site-search button[data-open-modal] {
